@@ -1,7 +1,7 @@
 Package: Rcpp
 Title: Seamless R and C++ Integration
 Version: 1.1.0.9
-Date: 2025-12-10
+Date: 2025-12-13
 Authors@R: c(person("Dirk", "Eddelbuettel", role = c("aut", "cre"), email = "edd@debian.org",
                     comment = c(ORCID = "0000-0001-6419-907X")),
              person("Romain", "Francois", role = "aut",
